# rust-agent-sdk

./: .gitignore  CLAUDE_CODE_ANALYSIS_SUMMARY.txt  CLAUDE_CODE_SOURCE_MAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_SOURCE_ANALYSIS.md  SECURITY.md  output-message.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/badges/: loc.json  tests.json
.github/workflows/: badges.yml
claude-code-js/: Task.js  Tool.js  _runtime.js  commands.js  context.js  cost-tracker.js  costHook.js  dialogLaunchers.js  history.js  ink.js  interactiveHelpers.js  projectOnboardingState.js  query.js  replLauncher.js  setup.js  tasks.js  tools.js
claude-code-js/QueryEngine/: QueryEngine.js  _index.js  _shared.js  init_QueryEngine.js  messageSelector.js
claude-code-js/cli/: exit.js  ndjsonSafeStringify.js  remoteIO.js  structuredIO.js  update.js
claude-code-js/commands/: advisor.js  commit-push-pr.js  commit.js  createMovedToPluginCommand.js  init-verifiers.js  init.js  install.js  review.js  security-review.js  statusline.js  ultraplan.js  version.js
claude-code-js/components/: AgentProgressLine.js  App.js  ApproveApiKey.js  AutoModeOptInDialog.js  AutoUpdater.js  AutoUpdaterWrapper.js  AwsAuthStatusBox.js  BaseTextInput.js  BashModeProgress.js  BridgeDialog.js  BypassPermissionsModeDialog.js  ChannelDowngradeDialog.js  ClaudeInChromeOnboarding.js  ClaudeMdExternalIncludesDialog.js  ClickableImageRef.js  CompactSummary.js  ConfigurableShortcutHint.js  ContextSuggestions.js  CoordinatorAgentStatus.js  CostThresholdDialog.js  CtrlOToExpand.js  DesktopHandoff.js  DevBar.js  DevChannelsDialog.js  DiagnosticsDisplay.js  EffortCallout.js  EffortIndicator.js  ExitFlow.js  ExportDialog.js  FallbackToolUseErrorMessage.js  FallbackToolUseRejectedMessage.js  FastIcon.js  FileEditToolDiff.js  FileEditToolUpdatedMessage.js  FileEditToolUseRejectedMessage.js  FilePathLink.js  FullscreenLayout.js  GlobalSearchDialog.js  HighlightedCode.js  HistorySearchDialog.js  (+64 more)
claude-code-js/constants/: apiLimits.js  betas.js  common.js  cyberRiskInstruction.js  errorIds.js  figures.js  files.js  github-app.js  keys.js  (+12 more)
examples/: bidirectional_permissions.rs  custom_tools.rs  multi_turn_bash.rs  sdk_client.rs  simple_query.rs  streaming_events.rs  tool_use_file_ops.rs
src/: agentic.rs  client.rs  errors.rs  lib.rs  query.rs  session.rs  types.rs
tests/: test_client.rs  test_errors.rs  test_example_postgres_store.rs  test_example_redis_store.rs  test_example_s3_store.rs  test_integration.rs  test_mcp_large_output.rs  test_message_parser.rs  test_query.rs  test_rate_limit_event_repro.rs  test_sdk_mcp_integration.rs  test_session_helpers_store.rs  test_session_import.rs  test_session_mutations.rs  test_session_resume.rs  test_session_store_conformance.rs  test_session_summary.rs  test_sessions.rs  test_stores_live.rs  test_streaming_client.rs  test_subprocess_buffering.rs  test_task_compat.rs  test_tool_callbacks.rs  test_transcript_mirror.rs  test_transport.rs  test_types.rs
(+8966 files in other folders)
