[package]
name = "rust-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Claude Code Agent"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
unicode-normalization = "0.1"
libc = "0.2"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
pretty_assertions = "1"
filetime = "0.2"
serial_test = "3"
