[package]
name = "rust-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Claude Code Agent"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
unicode-normalization = "0.1"
libc = "0.2"
tempfile = "3"

# HTTP transport & API client
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
pin-project-lite = "0.2"

# Tools
glob = "0.3"
regex = "1"
sha2 = "0.10"
base64 = "0.22"

# Retry
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
pretty_assertions = "1"
filetime = "0.2"
serial_test = "3"

[features]
default = []
integration-tests = []
